# dec

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.zig  demo.c  demo.zig  test.zig
src/: dec.zig  decContext.map.zig  decContext.patch.c  decContext.zig  decNumber.map.zig  decNumber.patch.c  decNumber.zig  env.zig
